--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.5.1",
     "next": "15.3.3",
     "next-auth": "^4.24.7",
     "patch-package": "^8.0.0",
