--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,76 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build
 /build
 
-# misc
-.DS_Store
-*.pem
+# Environment variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
+# API keys and secrets
+# Add any other files that may contain secrets, for example:
+# serviceAccountKey.json
+# *.pem
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+*.log
+logs
+*.log.*.[0-9].gz
 
-# vercel
-.vercel
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# System files
+.DS_Store
+Thumbs.db
 
-.genkit/*
-.env*
-
-# firebase
+# Firebase
+.firebase
 firebase-debug.log
-firestore-debug.log
+firebase-debug.*.log
+
+# Genkit
+.genkit/cache
+
+# Miscellaneous
+*.tsbuildinfo
+.eslintcache
+dist
+dist-ssr
+temp
+tmp
+*.zip
+*.tar.gz
+*.tgz
+*.rar
+*.patch
+patch-package.json.orig
