--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@octokit/rest": "^22.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
